--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name=".Training_batsal"></activity>
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.Design">
+        <activity android:name=".Training_batsal"
+            android:parentActivityName=".MainActivity"
+            ></activity>
+        <activity android:name=".MainActivity"
+            android:theme="@style/Theme.Design.NoActionBar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoadingActivity" />
+        <activity android:name=".LoadingActivity"
+            android:theme="@style/Theme.Design.NoActionBar"
+            />
     </application>
 
 </manifest>
