--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.Shashank02051997:FancyGifDialog-Android:1.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
