--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,21 +11,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design">
-        <activity android:name=".Training_batsal"
-            android:parentActivityName=".MainActivity"
-            ></activity>
-        <activity android:name=".MainActivity"
+        <activity android:name=".after_traning_Batsal"
             android:theme="@style/Theme.Design.NoActionBar"
             >
+
+        </activity>
+        <activity
+            android:name=".Training_batsal"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.Design.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoadingActivity"
-            android:theme="@style/Theme.Design.NoActionBar"
-            />
+        <activity
+            android:name=".LoadingActivity"
+            android:theme="@style/Theme.Design.NoActionBar" />
     </application>
 
 </manifest>
