--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.github.Shashank02051997:FancyGifDialog-Android:1.2'
-
+    implementation 'org.jsoup:jsoup:1.12.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
