--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.github.Shashank02051997:FancyGifDialog-Android:1.2'
     implementation 'org.jsoup:jsoup:1.12.1'
+    implementation 'com.airbnb.android:lottie:2.8.0'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
