--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design">
-        <activity android:name=".Detail_Absanimation"></activity>
+        <activity android:name=".lottie_Activity"
+            android:theme="@style/Theme.Design.NoActionBar"
+            ></activity>
+        <activity android:name=".Detail_Absanimation" />
         <activity android:name=".Detail_Absvideo" />
         <activity android:name=".after_training_abs" />
         <activity
