--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".running_beginner"/>
         <activity
             android:name=".LoadingActivity"
             android:theme="@style/Theme.Design.NoActionBar" />
