크롤링 url 수정(기존: 홈트레이닝 -> 수정 후 : 운동)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".running_beginner"/>
+        <activity android:name=".running_timer"/>
         <activity
             android:name=".LoadingActivity"
             android:theme="@style/Theme.Design.NoActionBar" />
